[gd_scene load_steps=6 format=3 uid="uid://dleq0707bjlnv"]

[ext_resource type="Script" path="res://Locations/activity_summary_overlay.gd" id="1_cdvrg"]
[ext_resource type="Theme" uid="uid://cjoh1pmvhw5l0" path="res://Themes/overall_theme.tres" id="1_pck37"]
[ext_resource type="PackedScene" uid="uid://64he387fibvb" path="res://Party/player_card.tscn" id="2_4mmah"]
[ext_resource type="Texture2D" uid="uid://cui56gkpy2e5v" path="res://DownloadAssets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Icons/special icons/stars.png" id="4_fnor7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3xr0a"]
atlas = ExtResource("4_fnor7")
region = Rect2(32, 16, 16, 16)

[node name="ActivitySummaryOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cdvrg")
metadata/_edit_vertical_guides_ = [262.0, 890.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -262.0
offset_right = 420.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.92549, 0.87451, 0.8, 1)

[node name="ContinueButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.82
offset_left = -49.5
offset_top = -24.0
offset_right = 50.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_pck37")
text = "Continue"

[node name="PlayerCardGrid" type="GridContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -236.0
offset_right = 304.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 26
columns = 2

[node name="PlayerCard" parent="CanvasLayer/PlayerCardGrid" instance=ExtResource("2_4mmah")]
layout_mode = 2

[node name="PlayerCard2" parent="CanvasLayer/PlayerCardGrid" instance=ExtResource("2_4mmah")]
layout_mode = 2

[node name="PlayerCard3" parent="CanvasLayer/PlayerCardGrid" instance=ExtResource("2_4mmah")]
layout_mode = 2

[node name="PlayerCard4" parent="CanvasLayer/PlayerCardGrid" instance=ExtResource("2_4mmah")]
layout_mode = 2

[node name="RewardItemsGrid" type="GridContainer" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 263.0
offset_top = 382.0
offset_right = 888.0
offset_bottom = 480.0
columns = 10

[node name="RewardTextureRect" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
z_index = 1
custom_minimum_size = Vector2(64, 64)
offset_left = 2.0
offset_top = 2.0
offset_right = 66.0
offset_bottom = 66.0
texture = SubResource("AtlasTexture_3xr0a")

[node name="Background" type="ColorRect" parent="CanvasLayer/RewardTextureRect"]
z_index = -1
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="CanvasLayer/ContinueButton" to="." method="_on_continue_button_pressed"]
